# gr-vlc

./: CMakeLists.txt  MANIFEST.md  README.md  README.md~
cmake/Modules/: vlcConfig.cmake
docs/: README.vlc
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: Relative_Channel_Test.grc  Relative_Channel_Test.py  Static_Channel_Test.grc
grc/: CMakeLists.txt  vlc_channel_fixed.xml  vlc_channel_relative.xml  vlc_channel_static.xml
include/vlc/: CMakeLists.txt  api.h  channel_fixed.h  channel_relative.h  channel_static.h
lib/: CMakeLists.txt  channel_fixed_impl.cc  channel_fixed_impl.h  channel_relative_impl.cc  channel_relative_impl.h  channel_static_impl.cc  channel_static_impl.h  qa_vlc.cc  qa_vlc.h  test_vlc.cc
python/: CMakeLists.txt  __init__.py  qa_channel_fixed.py  qa_channel_relative.py  qa_channel_static.py
swig/: CMakeLists.txt  vlc_swig.i
